--- a/archived.css
+++ b/archived.css
@@ -126,7 +126,7 @@
     }
   }
   .div-14 {
-    disply: flex;
+    display: flex;
     flex-direction: column;
     overflow: hidden;
     position: relative;
@@ -196,7 +196,7 @@
     }
   }
   .div-18 {
-    disply: flex;
+    display: flex;
     flex-direction: column;
     overflow: hidden;
     position: relative;
@@ -385,7 +385,7 @@
     }
   }
   .div-30 {
-    disply: flex;
+    display: flex;
     flex-direction: column;
     overflow: hidden;
     position: relative;
