--- a/archived.css
+++ b/archived.css
@@ -29,6 +29,7 @@
     flex-basis: auto;
     font: 600 20px/135% Epilogue, sans-serif;
   }
+
   .div-4 {
     align-self: start;
     display: flex;
@@ -125,6 +126,20 @@
       max-width: 100%;
     }
   }
+
+    /* Flappy Bird */
+    /* .div-25 {
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+      }
+      @media (max-width: 991px) {
+        .div-25 {
+          max-width: 100%;
+        }
+      } */
+
+  /* Instagram Shopping */
   .div-14 {
     display: flex;
     flex-direction: column;
@@ -133,7 +148,6 @@
     display: flex;
     min-height: 450px;
     align-items: start;
-    padding: 20px 60px 50px 20px;
   }
   @media (max-width: 991px) {
     .div-14 {
@@ -306,12 +320,12 @@
       margin-top: 40px;
     }
   }
+
+  /* Flappy Bird */
   .div-25 {
     justify-content: center;
-    background-color: #ccc;
     display: flex;
     flex-direction: column;
-    padding: 0 1px;
   }
   @media (max-width: 991px) {
     .div-25 {
@@ -529,11 +543,12 @@
       margin-top: 40px;
     }
   }
+
+  /* Tableau */
   .div-39 {
     background-color: #94c2d1;
     display: flex;
     flex-direction: column;
-    padding: 25px 25px 50px;
   }
   @media (max-width: 991px) {
     .div-39 {
@@ -547,12 +562,12 @@
     object-position: center;
     width: 31px;
   }
+
+  /* Tableau */
   .img-8 {
-    aspect-ratio: 1.56;
     object-fit: auto;
     object-position: center;
     width: 100%;
-    margin: 40px 0 46px;
   }
   @media (max-width: 991px) {
     .img-8 {
