--- a/index.css
+++ b/index.css
@@ -169,11 +169,6 @@
   .div-15 {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    align-items: start;
-    padding: 27px 33px 50px;
   }
   @media (max-width: 991px) {
     .div-15 {
@@ -190,6 +185,12 @@
     justify-content: center;
     align-items: center;
   }
+  @media (max-width: 991px) {
+    .img {
+      max-width: 100%;
+    }
+  }
+
   .img-2 {
     aspect-ratio: 1;
     object-fit: auto;
@@ -232,6 +233,8 @@
       width: 100%;
     }
   }
+
+  /* Styles SafeChat box */
   .div-17 {
     display: flex;
     flex-direction: column;
