Fixed some formatting in Archived

--- a/archived.css
+++ b/archived.css
@@ -163,25 +163,17 @@
   }
 
   .img {
-    position: absolute;
-    inset: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-  .img-2 {
     aspect-ratio: 1;
     object-fit: auto;
     object-position: center;
-    width: 50px;
-    margin-bottom: 254px;
+    width: 100%;
   }
   @media (max-width: 991px) {
-    .img-2 {
-      margin-bottom: 40px;
+    .img {
+      max-width: 100%;
     }
   }
+
   .div-15 {
     color: #000;
     text-align: center;
@@ -230,18 +222,6 @@
     .div-18 {
       max-width: 100%;
       padding: 0 20px;
-    }
-  }
-  .img-3 {
-    aspect-ratio: 1.85;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-    margin-bottom: 272px;
-  }
-  @media (max-width: 991px) {
-    .img-3 {
-      margin-bottom: 40px;
     }
   }
   .div-19 {
@@ -339,17 +319,7 @@
       max-width: 100%;
     }
   }
-  .img-4 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-4 {
-      max-width: 100%;
-    }
-  }
+  
   .div-26 {
     color: #000;
     text-align: center;
