--- a/archived.css
+++ b/archived.css
@@ -149,11 +149,7 @@
   .div-14 {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    min-height: 450px;
-    align-items: start;
+    justify-content: center;
   }
   @media (max-width: 991px) {
     .div-14 {
@@ -208,20 +204,16 @@
       margin-top: 40px;
     }
   }
+
+  /* Sound Transit box */
   .div-18 {
+    justify-content: center;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    min-height: 450px;
-    align-items: start;
-    padding: 20px 31px 50px;
   }
   @media (max-width: 991px) {
     .div-18 {
       max-width: 100%;
-      padding: 0 20px;
     }
   }
   .div-19 {
@@ -319,7 +311,7 @@
       max-width: 100%;
     }
   }
-  
+ 
   .div-26 {
     color: #000;
     text-align: center;
@@ -375,15 +367,11 @@
       max-width: 100%;
     }
   }
+
   .div-30 {
+    justify-content: center;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    min-height: 450px;
-    align-items: start;
-    padding: 20px 60px 50px 20px;
   }
   @media (max-width: 991px) {
     .div-30 {
@@ -459,7 +447,6 @@
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    color: #000;
   }
   @media (max-width: 991px) {
     .div-35 {
@@ -523,7 +510,7 @@
 
   /* Tableau */
   .div-39 {
-    background-color: #94c2d1;
+    justify-content: center;
     display: flex;
     flex-direction: column;
   }
